--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   font-style: normal;
-  background-color: #e5e5e5;
+  background-color: #fff;
   margin: 0;
 }
 
@@ -100,6 +100,8 @@ a {
   display: block;
 }
 
+/* Styling the front page */
+
 .dev {
   display: flex;
   flex-direction: column;
@@ -111,7 +113,7 @@ a {
   position: relative;
 }
 
-.dev-child {
+.who-am-i {
   margin: 9rem 2rem;
 }
 
@@ -157,6 +159,60 @@ main {
   box-shadow: 8px 8px 10px -10px rgb(209, 204, 204);
 }
 
+.card-block p {
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--clr-para);
+  line-height: 20px;
+}
+
+.card-block h2 {
+  font-weight: 700;
+  font-size: 2.5rem;
+  color: #172b4d;
+}
+
+.card-frame {
+  display: flex;
+  gap: 0.8rem;
+  padding: 0;
+  margin-bottom: 0.5rem;
+}
+
+.card-frame li {
+  margin: 5px;
+  font-size: 14px;
+  color: #7a869a;
+}
+
+.card-frame .no-count {
+  list-style: none;
+  color: var(--clr-para);
+  font-weight: 600;
+  margin-left: 0;
+}
+
+.card-tags {
+  list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 1rem 0;
+}
+
+.card-tags li {
+  display: flex;
+  align-items: center;
+  margin-right: 0.5rem;
+  background-color: #ebebff;
+  color: var(--clr-purple);
+  padding: 4px 12px;
+  border-radius: 8px;
+  font-size: 0.75rem;
+  line-height: 16px;
+  font-weight: 500;
+  letter-spacing: 0.03rem;
+}
+
 button {
   display: flex;
   align-items: center;
@@ -171,6 +227,12 @@ button {
   width: max-content;
 }
 
+.card-button:hover {
+  background-color: var(--clr-purple);
+  color: var(--clr-white);
+}
+
+/* About me style */
 .about {
   box-sizing: border-box;
   background: var(--clr-white);
@@ -182,6 +244,10 @@ button {
   border-top-right-radius: 5rem;
   box-shadow: 0 -10px 10px -10px rgba(83, 81, 81, 0.15);
   margin-bottom: 10rem;
+}
+
+.about-child {
+  padding: 114px 24px;
 }
 
 .about h2 {
@@ -200,6 +266,24 @@ button {
   padding: 1.5rem 0;
 }
 
+.skill-list ul {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin-top: 2rem;
+}
+
+.skill-list li {
+  list-style: none;
+}
+
+.skill-list .p {
+  font-weight: 500;
+  font-size: 20px;
+  color: #000;
+  padding: 1.8rem 0;
+}
+
 .lang {
   display: flex;
   flex-direction: column;
@@ -216,6 +300,13 @@ button {
   border-radius: 8px;
 }
 
+/* popUp */
+.popButtoms img {
+  padding-left: 10px;
+}
+
+/* end */
+
 li .lang-child img {
   margin-right: 10px;
 }
@@ -230,6 +321,66 @@ li .lang-child img {
   border-top: 1px solid gray;
 }
 
+/* contact form styles */
+.form-group {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--clr-purple);
+  box-sizing: border-box;
+  border: 1px solid var(--clr-purple);
+  border-top-left-radius: 5rem;
+  padding: 6rem 1.8rem;
+  height: auto;
+  box-shadow: -5px -15px 10px -10px rgba(83, 81, 81, 0.15);
+}
+
+.form-input {
+  position: relative;
+}
+
+.form-bg-img {
+  position: absolute;
+  width: 60%;
+  height: auto;
+  left: 160px;
+}
+
+.form-group h2 {
+  text-align: center;
+  font-size: 2.5rem;
+  line-height: 52px;
+  color: var(--clr-white);
+  padding-top: 6rem;
+}
+
+.form-group p {
+  font-size: 1.2rem;
+  line-height: 28px;
+  text-align: center;
+  color: var(--clr-white);
+  font-weight: 400;
+  display: flex;
+  margin: 2rem 0;
+}
+
+.form-group input,
+textarea {
+  background-color: var(--clr-white);
+  border: 1px solid #cfd8dc;
+  border-radius: 8px;
+  padding: 0.8rem 0;
+  margin: 10px 0;
+  width: 100%;
+  color: var(--clr-gray-100);
+}
+
+::placeholder {
+  font-family: 'Poppins', sans-serif;
+  color: var(--clr-gray-100);
+  font-size: 15px;
+  padding-left: 1rem;
+}
+
 .btn {
   background: var(--clr-white);
   display: flex;
@@ -240,9 +391,133 @@ li .lang-child img {
   color: var(--clr-white);
 }
 
+.error {
+  position: absolute;
+  left: 10rem;
+  bottom: 1rem;
+  color: rgb(255, 0, 0);
+  font-weight: bold;
+}
+
+/* PopUp Window */
+.feature {
+  background-color: #fff;
+  width: 60%;
+  height: 95%;
+  padding: 0 2rem;
+  overflow-y: scroll;
+  border-radius: 16px;
+}
+
+.overlay-content {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(193, 199, 208, 0.2);
+  backdrop-filter: blur(8px);
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.disable {
+  display: none;
+}
+
+.feature p {
+  font-size: 16px;
+  display: flex;
+}
+
+.popBottomContent {
+  display: flex;
+  flex-direction: column;
+  padding-top: 1rem;
+}
+
+.popButtoms {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding-top: 1.5rem;
+  border-top: 1px solid #ebecf0;
+  margin-bottom: 0;
+  width: -webkit-fill-available;
+}
+
+.feature .popButtoms .secondchild {
+  float: right;
+}
+
+.model-tags {
+  display: flex;
+  flex-flow: row wrap;
+  height: max-content;
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
+.model-tags li {
+  list-style: none;
+  flex-flow: row wrap;
+  height: 16px;
+}
+
+.model_img {
+  width: 100%;
+  max-height: 650px;
+  display: flex;
+  justify-content: center;
+  background-size: cover;
+  background-position: 100%;
+}
+
+.close-overlay {
+  border: none;
+  color: #000;
+  font-size: 1.5rem;
+}
+
+.feature .featureList li {
+  font-size: 15px;
+  margin: 1rem inherit;
+}
+
+.feature .featureList .no-count {
+  color: #344563;
+}
+
+.model-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 2rem;
+  height: 30px;
+}
+
+.model-top h3 {
+  font-size: 30px;
+  line-height: 52px;
+  color: #091e42;
+}
+
+.popButtoms a:hover {
+  color: var(--clr-para);
+}
+
 /* Style for 320px screens  */
 
 @media screen and (min-width: 320px) {
+  .form-group {
+    background-image: url(img/contact-form-shapes-mobile.svg);
+    background-repeat: no-repeat;
+    background-position: 100% 100px;
+    background-size: contain;
+  }
+
   .dev {
     background-image: url(img/header-shapesmobile@2x.svg);
     background-position: 0% auto;
@@ -261,11 +536,56 @@ li .lang-child img {
     margin: 5rem 0 0 0;
     padding-bottom: 6rem;
   }
+
+  .about-child a {
+    font-weight: 500;
+    color: #7f8cff;
+  }
+
+  .skill-list .p {
+    margin: 0 1.8rem;
+  }
+
+  /* PopUp window */
+  .model-top h3 {
+    line-height: 25px;
+    font-size: 18px;
+  }
+
+  .model-tags {
+    display: flex;
+    row-gap: 10px;
+  }
+
+  /* PopUp */
+  .popButtoms a {
+    font-size: 13px;
+  }
+
+  .feature {
+    padding: 0 1rem;
+  }
+
+  .feature p {
+    font-size: 12px;
+  }
+
+  .model-tags li {
+    font-size: 11px;
+    margin-right: 0;
+  }
 }
 
 /* Styles for 480px screen */
 
 @media screen and (min-width: 480px) {
+  .form-form {
+    background-image: url(img/contact-form-shapes-mobile.svg);
+    background-repeat: no-repeat;
+    background-position: 0% auto;
+    background-size: cover;
+  }
+
   .dev {
     background-image: url(img/header-shapesmobile@2x.svg);
     background-position: 0% auto;
@@ -280,6 +600,10 @@ li .lang-child img {
     line-height: 4.55rem;
   }
 
+  .card-block h2 {
+    font-size: 3rem;
+  }
+
   .about h2 {
     font-size: 4rem;
     line-height: 70px;
@@ -287,14 +611,26 @@ li .lang-child img {
   }
 
   .about {
-    margin: 5rem 1 1 1;
+    margin: 5rem 0 0 0;
     padding-bottom: 6rem;
+  }
+
+  .about-child a {
+    font-weight: 500;
+    color: #7f8cff;
   }
 }
 
 /* Styling for 600px screen */
 
 @media screen and (min-width: 600px) {
+  .form-form {
+    background-image: url(img/contact-form-shapes-mobile.svg);
+    background-repeat: no-repeat;
+    background-position: auto;
+    background-size: 100% auto;
+  }
+
   .dev {
     background-image: url(img/header-shapesmobile@2x.svg);
     background-position: auto;
@@ -320,6 +656,12 @@ li .lang-child img {
     max-width: 600px;
   }
 
+  .card-block h2 {
+    max-width: 400px;
+    font-size: 3.5rem;
+    line-height: 65px;
+  }
+
   .dev p {
     font-size: 20px;
     line-height: 32px;
@@ -340,7 +682,20 @@ li .lang-child img {
     padding-bottom: 6rem;
   }
 
-  .skills .p {
+  .about-child {
+    margin: auto 4rem;
+  }
+
+  .about-child a {
+    font-weight: 500;
+    color: #7f8cff;
+  }
+
+  .form-group h2 {
+    padding-top: 2rem;
+  }
+
+  .skill-list .p {
     margin: 0 5.3rem;
   }
 
@@ -364,11 +719,29 @@ li .lang-child img {
   .nav-link a {
     color: var(--clr-para);
   }
+
+  /* PopUp window */
+  .model-top h3 {
+    line-height: 25px;
+    font-size: 18px;
+  }
+
+  .model-tags {
+    display: flex;
+    row-gap: 10px;
+  }
 }
 
 /* Styles for 768px screens */
 
 @media screen and (min-width: 768px) {
+  .form-group {
+    background-image: url(img/contact-form-background-shapes.svg);
+    background-repeat: no-repeat;
+    background-position: 100% 100px;
+    background-size: contain;
+  }
+
   .dev {
     background-image: url(img/Header-bg.svg);
     background-position: 0% 100px;
@@ -430,6 +803,12 @@ li .lang-child img {
     transform: scale(1.2);
   }
 
+  .card-block h2 {
+    font-size: 2rem;
+    line-height: 35px;
+    font-weight: 600;
+  }
+
   .card {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -437,8 +816,37 @@ li .lang-child img {
     margin: 3rem;
   }
 
-  .card-reverse img:nth-of-type(1) {
+  /* PopUp */
+  .popButtoms img {
+    padding-left: 10px;
+  }
+
+  /* end */
+
+  .card1 img:nth-of-type(1) {
     order: 1;
+  }
+
+  .card-frame {
+    margin: 0;
+  }
+
+  .card-block {
+    margin-top: 0.5rem;
+  }
+
+  .card-block p {
+    font-size: 16px;
+    color: var(--clr-para);
+  }
+
+  .card-tags li {
+    font-size: 0.9rem;
+  }
+
+  .about-child {
+    margin: auto 0 0 3rem;
+    padding: 4rem 0 8rem 0;
   }
 
   .about h2 {
@@ -456,8 +864,16 @@ li .lang-child img {
     padding-bottom: 0;
   }
 
-  .skills {
+  .skill-list {
     margin-right: 3rem;
+  }
+
+  .form-child {
+    margin: 0 8rem;
+  }
+
+  .form-group h2 {
+    padding-top: 2rem;
   }
 
   li .lang {
@@ -473,16 +889,20 @@ li .lang-child img {
     transition-duration: 350ms;
   }
 
+  .model-tags li {
+    list-style: none;
+  }
+
   .lang li:hover {
     transform: scale(1.3);
   }
 
-  .skills .p {
+  .skill-list .p {
     padding-bottom: 1rem;
     margin: 0 0 0 2rem;
   }
 
-  .skills p {
+  .skill-list p {
     padding: 1.1rem 0;
   }
 
@@ -508,6 +928,16 @@ li .lang-child img {
     color: var(--clr-para);
   }
 
+  /* PopUp */
+  .feature {
+    background-color: #fff;
+    width: 60%;
+    height: 95%;
+    padding: 0 2rem;
+    overflow-y: scroll;
+    border-radius: 16px;
+  }
+
   .overlay-content {
     width: 100%;
     height: 100%;
@@ -519,6 +949,92 @@ li .lang-child img {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .disable {
+    display: none;
+  }
+
+  .feature p {
+    font-size: 16px;
+    margin-bottom: 4rem;
+    display: flex;
+  }
+
+  .popBottomContent {
+    display: grid;
+    grid-template-columns: 1fr 280px;
+    padding-top: 1rem;
+  }
+
+  .popButtoms {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding-top: 1rem;
+    border-top: 1px solid #ebecf0;
+  }
+
+  .popButtoms a {
+    border: 1px solid var(--clr-purple);
+    border-radius: 8px;
+    color: var(--clr-purple);
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .popButtoms a:hover {
+    color: var(--clr-para);
+  }
+
+  .model-tags {
+    display: flex;
+    justify-content: center;
+    column-gap: 10px;
+    row-gap: 10px;
+    flex-flow: row wrap;
+    height: max-content;
+  }
+
+  .model_img {
+    width: 100%;
+    max-height: 650px;
+    display: flex;
+    justify-content: center;
+    background-size: cover;
+    background-position: 100%;
+  }
+
+  .close-overlay {
+    border: none;
+    color: #000;
+    font-size: 1.5rem;
+  }
+
+  .feature .featureList li {
+    font-size: 15px;
+    margin: 0 inherit;
+    margin-top: 0;
+  }
+
+  .feature .featureList .no-count {
+    color: #344563;
+  }
+
+  .model-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 2rem;
+    height: 25px;
+  }
+
+  .model-top h3 {
+    font-size: 30px;
+    line-height: 52px;
+    color: #091e42;
   }
 }
 
@@ -540,6 +1056,11 @@ li .lang-child img {
     margin-bottom: 0;
   }
 
+  .about-child {
+    margin-left: 5rem;
+    padding-bottom: 10rem;
+  }
+
   .dev h1 {
     max-width: 395px;
     font-size: 3rem;
@@ -553,7 +1074,13 @@ li .lang-child img {
     font-size: 1rem;
   }
 
-  .skills {
+  .about-child a {
+    font-size: 1rem;
+    font-weight: 500;
+    color: #7f8cff;
+  }
+
+  .skill-list {
     margin-right: 5rem;
   }
 
@@ -571,14 +1098,60 @@ li .lang-child img {
     fill: var(--clr-purple);
   }
 
+  .form-child {
+    margin: 0 10rem;
+  }
+
+  .form-group h2 {
+    padding-top: 2rem;
+  }
+
   .lang {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
 
+  .dev-child {
+    margin-left: 14rem;
+    margin-right: 14rem;
+    padding: 7rem 0;
+  }
+
   .card {
     gap: 1rem;
     margin: 3rem 10rem;
+  }
+
+  .card-block {
+    line-height: 15px;
+    margin-top: 0;
+  }
+
+  .card-frame {
+    margin: 0.5rem 0;
+  }
+
+  .card-frame li {
+    font-size: 14px;
+    margin: 0 5px;
+  }
+
+  .card-block p {
+    font-size: 16px;
+  }
+
+  .card-block h2 {
+    font-size: 1.8rem;
+    line-height: 35px;
+  }
+
+  .card-tags {
+    margin: 1rem 0;
+  }
+
+  .card-tags li {
+    font-size: 1rem;
+    padding: 4px 14px;
   }
 
   .nav-items {
@@ -596,8 +1169,27 @@ li .lang-child img {
     gap: 1.5rem;
   }
 
+  .card-frame li {
+    margin: 10px;
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .card-block {
+    padding-top: 40px;
+  }
+
   .nav-link a {
     margin: 0 0.5rem;
+  }
+
+  .form-child {
+    margin: 0 20rem;
+  }
+
+  .card-tags li {
+    padding: 4px 12px;
+    font-size: 12px;
   }
 
   .btn {
