--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   font-style: normal;
-  background-color: #fff;
+  background-color: #e5e5e5;
   margin: 0;
 }
 
@@ -266,18 +266,18 @@ button {
   padding: 1.5rem 0;
 }
 
-.skill-list ul {
+.skills ul {
   display: flex;
   flex-direction: column;
   padding: 0;
   margin-top: 2rem;
 }
 
-.skill-list li {
+.skills li {
   list-style: none;
 }
 
-.skill-list .p {
+.skills .p {
   font-weight: 500;
   font-size: 20px;
   color: #000;
@@ -287,6 +287,7 @@ button {
 .lang {
   display: flex;
   flex-direction: column;
+
 }
 
 .lang li {
@@ -542,7 +543,7 @@ textarea {
     color: #7f8cff;
   }
 
-  .skill-list .p {
+  .skills .p {
     margin: 0 1.8rem;
   }
 
@@ -695,7 +696,7 @@ textarea {
     padding-top: 2rem;
   }
 
-  .skill-list .p {
+  .skills .p {
     margin: 0 5.3rem;
   }
 
@@ -864,7 +865,7 @@ textarea {
     padding-bottom: 0;
   }
 
-  .skill-list {
+  .skills {
     margin-right: 3rem;
   }
 
@@ -897,12 +898,12 @@ textarea {
     transform: scale(1.3);
   }
 
-  .skill-list .p {
+  .skills .p {
     padding-bottom: 1rem;
     margin: 0 0 0 2rem;
   }
 
-  .skill-list p {
+  .skills p {
     padding: 1.1rem 0;
   }
 
@@ -975,19 +976,6 @@ textarea {
     border-top: 1px solid #ebecf0;
   }
 
-  .popButtoms a {
-    border: 1px solid var(--clr-purple);
-    border-radius: 8px;
-    color: var(--clr-purple);
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .popButtoms a:hover {
-    color: var(--clr-para);
-  }
 
   .model-tags {
     display: flex;
@@ -1013,29 +1001,6 @@ textarea {
     font-size: 1.5rem;
   }
 
-  .feature .featureList li {
-    font-size: 15px;
-    margin: 0 inherit;
-    margin-top: 0;
-  }
-
-  .feature .featureList .no-count {
-    color: #344563;
-  }
-
-  .model-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 2rem;
-    height: 25px;
-  }
-
-  .model-top h3 {
-    font-size: 30px;
-    line-height: 52px;
-    color: #091e42;
-  }
 }
 
 /* Styles for 900px screen */
@@ -1080,7 +1045,7 @@ textarea {
     color: #7f8cff;
   }
 
-  .skill-list {
+  .skills {
     margin-right: 5rem;
   }
 
@@ -1109,6 +1074,8 @@ textarea {
   .lang {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    list-style: none;
+    margin-left: 3rem;
   }
 
   .dev-child {
